[gd_scene load_steps=4 format=2]

[ext_resource path="res://floor.png" type="Texture" id=1]
[ext_resource path="res://Floor.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 29.1605, 29.5917 )

[node name="Floor" type="Area2D"]
scale = Vector2( 3, 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="TweenFloorShow" type="Tween" parent="."]

[node name="TweenFloorHide" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="Label" type="Label" parent="."]
margin_left = -8.36359
margin_top = -5.99092
margin_right = 8.63641
margin_bottom = 8.00908
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="tween_completed" from="TweenFloorHide" to="." method="_on_TweenFloorHide_tween_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
